B-F Sandbox Full-Backup/src/objects/Test_Case__c.object
<CustomObject>
    <description>A Test Case represents a repeatable business scenario which will allow application functionality to be tested. Test Cases are associated to Use Cases, as they should reflect a business scenario.</description>
    <fields>
        <fullName>Actor_s__c</fullName>
        <inlineHelpText>Add user profiles or type here for which the scripts are relevant</inlineHelpText>
        <label>Actor(s)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Work_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Work Package</label>
        <referenceTo>Work_Package__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The requirement the test case is related to and covers from a traceability perspective.</description>
        <label>Related Requirement</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Related Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Case_Name__c</fullName>
        <label>Test Case Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Case_No__c</fullName>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Test Case No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unit Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Acceptance Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Use Case</label>
        <referenceTo>Use_Case__c</referenceTo>
        <relationshipLabel>Related Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Package_Name__c</fullName>
        <formula>Application_Work_Package__r.Work_Package_Name__c</formula>
        <label>Work Package Name</label>
        <type>Text</type>
    </fields>
    <label>Test Case</label>
    <listViews>
        <fullName>AllTestCases</fullName>
        <columns>Application_Work_Package__c</columns>
        <columns>Work_Package_Name__c</columns>
        <columns>NAME</columns>
        <columns>Test_Case_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Use_Case__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Test Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Test_Cases_Failed</fullName>
        <columns>NAME</columns>
        <columns>Test_Case_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Use_Case__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Test Cases Failed</label>
    </listViews>
    <listViews>
        <fullName>Test_Cases_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Test_Case_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Use_Case__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Test Cases In Progress</label>
    </listViews>
    <listViews>
        <fullName>Test_Cases_Passed</fullName>
        <columns>NAME</columns>
        <columns>Test_Case_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Use_Case__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Passed</value>
        </filters>
        <label>Test Cases Passed</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Test Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>